src/etc/iptables.conf
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:FILTERS - [0:0]
:DOCKER-USER - [0:0]

-F INPUT
-F OUTPUT
-F DOCKER-USER
-F FILTERS

-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type any -j ACCEPT
-A INPUT -j FILTERS

-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p tcp --dport 53 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p udp --dport 53 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p udp --dport 123 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p tcp --dport 465 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p tcp --dport 587 -j ACCEPT
-A OUTPUT -p udp --dport 67 -j ACCEPT
-A OUTPUT -j DROP

-A DOCKER-USER -j RETURN

-A FILTERS -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -s 127.0.0.1 -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -p tcp --dport 22 -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -p tcp --dport 80 -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -p tcp --dport 443 -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -p tcp --dport 10050 -j ACCEPT
-A FILTERS -j DROP

COMMIT
